--- a/frontend/src/css/DeskStyles.css
+++ b/frontend/src/css/DeskStyles.css
@@ -3,21 +3,27 @@
     border-radius: 20px;
     padding: 1.4rem 2.5rem 1.4rem 1.4rem;
     background: var(--color-0);
-    margin: 1rem;
+
+/*    margin: 1rem;*/
 }
 
+.inner-panels-wrapper {
+/*    min-width: fit-content;*/
+
+}
 
 .panel-items-container { display: grid;
     grid-template-areas: "iframe-bounding" "panel-controls";
     grid-template-rows: calc(100% - 25px) 25px; /* Beispiel: 50px für die unteren 13% */
     gap: 5px;
 
-
     margin: 0;
     padding: 0;
-    height: 100%;
+
     box-sizing: border-box;
     align-content: center;
+
+
 }
 
 .panel-controls { grid-area: panel-controls;
@@ -52,20 +58,28 @@
     border: 1px solid var(--color-2);
     margin: 0.5rem;
     padding: 0;
-    width: 100%;
-    height: 100%;
-}
 
-iframe {
-    border: 1px solid transparent;
-    border-radius: 20px;
-    background: var(--color-0);
-    overflow: scroll;
     width: 100%;
     height: 100%;
 
     min-width: 0;
     min-height: 0;
+
+}
+
+iframe {
+
+    border: 1px solid transparent;
+    border-radius: 20px;
+    background: var(--color-0);
+    overflow: scroll;
+
+    width: 100%;
+    height: 100%;
+
+    min-width: 0;
+    min-height: 0;
+
 }
 
 .panel-name {
